tests/invalid/readonly/write_from_global.pts
prototype A {
    readonly int x = 0;
}

function touch(A a) : void {
    a.x = 1;
}
